Add two-stage bootloader to solve the DFU/warm-boot problem.
This creates a first-stage bootloader in image slot 0 that checks
for button presses, and either jumps to image slot 1 to run the
DFU bootloader, or jumps to image slot 2 to run the badge
application.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-*.gtkw
-*_Implmnt/
-stdout.log
-synlog.tcl
-*~
-*.swp
-*bak
-gerbers/
-build/
-*.pyc
-OLD
+*.json
+*.asc
+*.rpt
+*.bin
+brightness_lut_rom.txt
+filter_bank_mem.txt
